--- a/assets-slider/css/style.css
+++ b/assets-slider/css/style.css
@@ -3,3 +3,53 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+main img{
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.container{
+  width: 80%;
+  height: 60%;
+  background-color: beige;
+}
+
+.slider{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.arrow{
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  line-height: 15px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.654);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.arrow.up{
+  top: 10px;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.arrow.down{
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%);
+}
