--- a/assets-slider/css/style.css
+++ b/assets-slider/css/style.css
@@ -11,28 +11,53 @@ main{
   height: 100vh;
 }
 
-main img{
-  top: 0;
-  left: 0;
+.container{
+  display: flex;
+  width: 80%;
+  height: 60%;
+}
+
+.full{
+  width: 80%;
+  height: 100%;
+}
+
+.full img{
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.container{
-  width: 80%;
-  height: 60%;
-  background-color: beige;
-}
-
 .slider{
   position: relative;
+  width: 20%;
+  height: 100%;
+}
+
+.card{
+  position: relative;
+  width: 100%;
+  height: calc(100% / 5);
+}
+
+.layer{
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, .8);
+}
+
+.slider img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .arrow{
   position: absolute;
+  z-index: 99;
   width: 18px;
   height: 18px;
   line-height: 15px;
