--- a/assets-slider/css/style.css
+++ b/assets-slider/css/style.css
@@ -53,7 +53,10 @@ main{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100%; 
+}
+
+.opacity{
   background-color: rgba(0, 0, 0, .8);
 }
 
